Bug fixes for responsive styleesheets (!87)
Fixes for the following:
Added searchbars to menu
Made logchecker link hidden by default
Tweaked forums (made quote links clickable, added unread icon)
Fix icon colors in sunset and coffee

Squashed commit of the following:

commit 341c5cf1f8172961d8243b5b2b953f7a95aa292c
Author: Welp Wazowski <welp@apollo.rip>
Date:   Sun May 13 14:29:49 2018 -0700

    squashed 3 commits

--- a/static/styles/apollostage/style.css
+++ b/static/styles/apollostage/style.css
@@ -528,6 +528,9 @@ table.box2 {
 .linkbox br {
 	content: ''
 }
+#nav_logchecker {
+	display: block;
+}
 
 .read {
 	background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQAgMAAABinRfyAAAACVBMVEX///+Vmp6Vmp6SEiFDAAAAAnRSTlMAAHaTzTgAAAAtSURBVHhefYuhEQAwCMTetvv9Pl2CIfgpoSBwRORiguFKD4dMydeyqlZtrU8A6JMUKeHoG3AAAAAASUVORK5CYII=) center no-repeat
@@ -1595,15 +1598,18 @@ blockquote {
 	display: flex;
 	flex-wrap: wrap;
 	margin: -4px;
-	padding: 0 4px;
 }
 /*
  * We want vertical flex unless there's a sidebar. However, CSS has no parent selectors.
  * So, instead, we set width: 100% on everything, which is basically the same as column
  * flex, and then just override that to be default if there is a sidebar.
  */
-.thin > * {
+.thin:not(.linkbox) > :not(.two_columns) {
 	width: 100%;
+}
+.thin > table {
+	/* fuck css, dude. Still not sure why this actually happens. */
+	width: calc(100% - 8px);
 }
 .thin > .sidebar ~ * {
 	width: auto;
@@ -1651,7 +1657,7 @@ blockquote {
  * rules above that are overridden by media queries, rather
  * than being put here like they should be */
 @media (min-width:480px) {
-	.thin:last-child > * {
+	.thin:last-child > :not(.two_columns) {
 		margin: 4px;
 	}
 	#nav_staff {
@@ -1758,6 +1764,14 @@ blockquote {
 		max-width: 100%;
 	}
 	/* END site layout */
+	/* BEGIN notifications */
+	.i-am-new {
+		width: calc(100% - 48px) !important;
+	}
+	.i-am-new li {
+		width: 100% !important;
+	}
+	/* END notifications */
 	/* BEGIN user settings */
 	#user #userform {
 		width: 100%;
@@ -1846,7 +1860,6 @@ blockquote {
 		display: block;
 		width: 100%;
 		padding-bottom: 3px;
-		padding-top: 3px;
 		/* for position:absolute children */
 		position: relative;
 		line-height: 1.4;
@@ -1895,7 +1908,7 @@ blockquote {
 	.torrent_table .add_bookmark a {
 		float: none !important;
 	}
-	.torrent_table .cats_col {
+	.torrent_table .cats_col:not(.m_cats_col) {
 		display: none;
 	}
 	.group .group_info,
@@ -1967,7 +1980,7 @@ blockquote {
 		padding-left: 6px;
 		order: 5;
 	}
-	.td_files:before {
+	.td_file_count:before {
 		content: 'Files: ';
 	}
 	.torrent_table .group_torrent td:nth-child(4) {
@@ -2076,12 +2089,18 @@ blockquote {
 	.forum_index .last_read {
 		float: none !important;
 	}
+	.forum_index .last_topic,
 	.forum_index .last_poster {
 		float: none !important;
 	}
-	.forum_index .last_poster:before {
-		content: '\a';
-		white-space: pre;
+	.forum_index .last_topic {
+		display: block;
+	}
+	#wrapper .td_read {
+		float: left;
+		width: 11px;
+		height: 12px;
+		margin: 3px 5px 0 5px;
 	}
 	.td_topic_count.m_td_right:before {
 		content: 'T: ';
@@ -2106,7 +2125,7 @@ blockquote {
 		flex-direction: column;
 		align-items: stretch;
 	}
-	.forum_post tr:not(.colhead_dark) {
+	.forum_post tr:not(.colhead_dark):not(.hidden) {
 		display: block;
 		width: 100%;
 		position: relative;
@@ -2140,6 +2159,7 @@ blockquote {
 		position: absolute;
 		top: -55px;
 		left: 5px;
+		width: auto;
 		word-break: break-all;
 	}
 	.forum_post .avatar img {
@@ -2229,6 +2249,9 @@ blockquote {
 		top: 20px;
 	}
 	/* END hamburger bar */
+	#header {
+		--row-height: 40px;
+	}
 	#header ul:not(#userinfo_major):not(#userinfo_stats) {
 		display: flex;
 		flex-wrap: wrap;
@@ -2238,21 +2261,43 @@ blockquote {
 		width: 33.3%;
 		margin: 0;
 	}
-	#searchbars,
+	#header ul:not(#userinfo_major):not(#userinfo_stats) a {
+		line-height: var(--row-height);
+	}
 	#alerts {
 		display: none;
 	}
+	/* BEGIN searchboxes */
+	#searchbars ul {
+		position: absolute;
+		bottom: 0;
+		height: unset;
+		padding: 0 0 0 6px;
+	}
+	#searchbars li {
+		height: var(--row-height);
+	}
+	#searchbars li:nth-child(-n+3) .search_form {
+		margin: 6px 6px 3px 0;
+	}
+	#searchbars li:nth-child(n+4) .search_form {
+		margin: 3px 6px 6px 0;
+	}
+	#header #searchbars input {
+		height: calc(var(--row-height) - 9px);
+	}
+	/* END searchboxes */
 	/* BEGIN userinfo */
 	#userinfo {
 		position: static;
 	}
 	#userinfo_major {
 		right: 12px;
-		top: calc(100% - 451px);
+		top: calc(100% - var(--row-height) * 10 - 55px);
 	}
 	#userinfo_stats {
 		right: 12px;
-		top: calc(100% - 433px);
+		top: calc(100% - var(--row-height) * 10 - 38px);
 		color: white;
 		line-height: 1.3;
 	}
@@ -2268,16 +2313,15 @@ blockquote {
 	#userinfo_username {
 		position: absolute;
 		left: 0;
-		bottom: 0;
+		bottom: calc(var(--row-height) * 2);
 		background: radial-gradient(circle at top left, #22696eaf, #22696e);
-		transition: all 200ms;
 	}
 	#nav_userclass {
 		display: none;
 	}
 	#userinfo_minor {
 		position: absolute;
-		bottom: 50px;
+		bottom: calc(var(--row-height) * 3);
 		background: radial-gradient(circle at top left, #1e7683aa, #1e7683);
 	}
 	/* S P E C I F I C I T Y */
@@ -2296,7 +2340,7 @@ blockquote {
 	#menu ul {
 		background: radial-gradient(circle at top left, #0999, #088);
 		position: absolute;
-		bottom: 250px;
+		bottom: calc(var(--row-height) * 7);
 	}
 	#menu li {
 		background: transparent !important;
@@ -2332,20 +2376,8 @@ blockquote {
 	/* END checked */
 	/* END site header */
 }
-@media (max-width: 480px) and (max-height: 480px) {
-	#header ul:not(#userinfo_major):not(#userinfo_stats) a {
-		line-height: 45px;
-	}
-	#userinfo_minor {
-		bottom: 45px;
-	}
-	#menu ul {
-		bottom: 225px;
-	}
-	#userinfo_stats {
-		top: calc(100% - 393px);
-	}
-	#userinfo_major {
-		top: calc(100% - 411px);
+@media (max-width:480px) and (max-height:480px) {
+	#header {
+		--row-height: 35px;
 	}
 }
